# GenAI_with_LangChain

./: .env example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
1-Langchain/: GettingStarted.ipynb
3.2-DataIngestion/: 3.2-DataIngestion.ipynb
3.3-DataTrnasformer/: 3.3-RecursiveCharcterSplitter.ipynb  3.4-TextSplitterCharcter.ipynb  3.5-HTMLTextsplitter.ipynb  3.6-REcursiveJsonSplitter.ipynb
4-Embeddings/: 4.1-embeddings-openai.ipynb  4.2-embeddings-ollama.ipynb  4.3-embeddings-huggingface.ipynb
